--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,155 @@
   <h1>
     Welcome to {{title}}!
   </h1>
+  <div class="row">
+    <div class="col-md-9" style="
+    margin-left: 200px;
+">
+            <div class="table-responsive">
+                    <table class="table table-shopping">
+                            <thead>
+                                <tr>
+                                    <th class="text-center"></th>
+                                    <th></th>
+                                    <th class="th-description"></th>
+                                    <th class="th-description"></th>
+                                    <th class="text-right"></th>
+                                    <th class="text-right"></th>
+                                    <th class="text-right"></th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        
+                                    </td>
+                                    <td class="td-name">
+                                            <a href="#jacket">Web designer</a>
+                                            <br><small>Shopify</small>
+                                    </td>
+                                    <td>
+                                        <div class="info info-horizontal" style="
+                                        padding-top: 0px;
+                                    ">
+            <div class="icon icon-primary">
+              <i class="material-icons">location_on</i>
+            </div>
+            <div class="description">
+              <h4 class="info-title">New York, New York</h4>
+              
+            </div>
+              </div>
+                                    </td>
+                                  <td>
+                                        <button class="btn btn-success">Success<div class="ripple-container"></div></button>
+                                    
+                                  </td>
+                                    
+                                    
+                                </tr>
+                                <tr>
+                                        <td>
+                                            
+                                        </td>
+                                        <td class="td-name">
+                                                <a href="#jacket">Web designer</a>
+                                                <br><small>Shopify</small>
+                                        </td>
+                                        <td>
+                                            <div class="info info-horizontal" style="
+                                            padding-top: 0px;
+                                        ">
+                            <div class="icon icon-primary">
+                                <i class="material-icons">location_on</i>
+                            </div>
+                            <div class="description">
+                                <h4 class="info-title">New York, New York</h4>
+                                
+                            </div>
+                        </div>
+                                        </td>
+                                      <td>
+                                            <button class="btn btn-success">Success<div class="ripple-container"></div></button>
+                                        
+                                      </td>
+                                        
+                                        
+                                    </tr>
+                                    <tr>
+                                            <td>
+                                                
+                                            </td>
+                                            <td class="td-name">
+                                                    <a href="#jacket">Web designer</a>
+                                                    <br><small>Shopify</small>
+                                            </td>
+                                            <td>
+                                                <div class="info info-horizontal" style="
+                                                padding-top: 0px;
+                                            ">
+                                <div class="icon icon-primary">
+                                    <i class="material-icons">location_on</i>
+                                </div>
+                                <div class="description">
+                                    <h4 class="info-title">New York, New York</h4>
+                                    
+                                </div>
+                            </div>
+                                            </td>
+                                          <td>
+                                                <button class="btn btn-success">Success<div class="ripple-container"></div></button>
+                                            
+                                          </td>
+                                            
+                                            
+                                        </tr>
+                                        <tr>
+                                                <td>
+                                                    
+                                                </td>
+                                                <td class="td-name">
+                                                        <a href="#jacket">Web designer</a>
+                                                        <br><small>Shopify</small>
+                                                </td>
+                                                <td>
+                                                    <div class="info info-horizontal" style="
+                                                    padding-top: 0px;
+                                                ">
+                                    <div class="icon icon-primary">
+                                        <i class="material-icons">location_on</i>
+                                    </div>
+                                    <div class="description">
+                                        <h4 class="info-title">New York, New York</h4>
+                                        
+                                    </div>
+                                </div>
+                                                </td>
+                                              <td>
+                                                    <button class="btn btn-success">Success<div class="ripple-container"></div></button>
+                                                
+                                              </td>
+                                                
+                                                
+                                            </tr>
+                               
+                               
+                            </tbody>
+                        </table>
+                    </div>
+    </div>
+    <div class="col-md-12">
+            <div class="card card-raised card-background" style="background-image: url('assets/img/examples/card-project6.jpg')">
+                <div class="card-content">
+                    <h6 class="category text-info">Marketing</h6>
+                    <h3 class="card-title">0 to 100.000 Customers in 6 months</h3>
+                    <p class="card-description" id="localTime">junks</p>
+                    <a href="#pablo" class="btn btn-warning btn-round">
+                        <i class="material-icons">subject</i> Case Study
+                    </a>
+                </div>
+            </div>
+        </div>
+</div>
   
 
